--- a/public/style.css
+++ b/public/style.css
@@ -2,11 +2,20 @@ body {
   font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
   margin: 2em;
   font-size: 14px;
+  color: #333333;
 }
 
 h1 {
   font-style: italic;
-  color: #28a745;
+  color: #333333;
+}
+
+.text-red {
+  color: #dc3545;
+}
+
+.text-blue {
+  color: #007bff;
 }
 
 .post-box {
@@ -29,11 +38,30 @@ h1 {
   text-align: right;
 }
 
-.post-box-button {
+.post-button {
   margin-left: 10px;
   padding: 10px;
   box-sizing: border-box;
   line-height: 20px;
+}
+
+.delete-box {
+  text-align: right;
+}
+
+.delete-button {
+  padding: 5px;
+  color: #fff;
+  border-style: none;
+  outline: none;
+  border-radius: 5px;
+  background-color: #dc3545;
+  border-bottom: 2px solid #b02a37;
+}
+
+.delete-button:hover {
+  background-color: #b02a37;
+  border-bottom: 2px solid #dc3545;
 }
 
 .post-list {
@@ -84,6 +112,11 @@ h1 {
   border-bottom: 2px solid #b02a37;
 }
 
+.post-item-vote-red button:hover {
+  background-color: #b02a37;
+  border-bottom: 2px solid #dc3545;
+}
+
 .post-item-vote-blue {
   flex: 1;
   padding: 10px;
@@ -92,4 +125,9 @@ h1 {
 .post-item-vote-blue button {
   background-color: #007bff;
   border-bottom: 2px solid #0362c8;
+}
+
+.post-item-vote-blue button:hover {
+  background-color: #0362c8;
+  border-bottom: 2px solid #007bff;
 }
